# flatcfe

./: Cargo.toml  README.md
src/: compilation.fbs  compilation_generated.rs  features.rs  lib.rs  load.rs  main.rs  parse.rs  parse_test.rs  reflection.fbs  resolve.rs  schema.fbs  schema_generated.h  schema_generated.rs  types.rs  write.rs
tests/: integration_test.rs
tests/test_imports/: s1.fbs  s2.fbs
