[package]
name = "flatcfe"
version = "0.1.0"
authors = ["Casper Neo <cneo@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "*"
nom = "5.0.0"
typed-arena = "2.0.0"
nom_locate = "2.1.0"
# indexmap = "1.6.0"
